2001-03-10  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-font-lock-keywords): Respect entry types
	'msgid_plural' and 'msgstr[]'.
	'%*s' is a valid sformat, too.
	(po-font-lock-keywords): Fix regexp; '[]' part is optional.
	(po-any-msgstr-regexp): Also match msgstr[] fields.
	(po-msgstr-idx-keyword-regexp): New variable.
	(po-set-msgstr): Respect indexed msgstr entries; use
	`po-msgstr-idx-keyword-regexp'.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Update copyright year. Add code to update
	po/ChangeLog and tell the user about the m4 macros. Don't attempt to
	run config.status, because aclocal.m4 is not ready.

2001-03-03  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-subedit-exit): Run po-subedit-exit-hook before
	leaving the edit buffer.

2001-02-10  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Bail out if $gettext_dir doesn't exist.

2001-02-07  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Fix bug in 2000-12-08 patch.

2001-01-28  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el: Call autoload with 4 arguments.
	(po-content-type-charset-alist): Change cars to uppercase.
	(po-find-file-coding-system): Uppercase charset for lookup in
	po-content-type-charset-alist.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* magic.add: Remove file. Has been integrated into the 'file' package.
	* Makefile.am (EXTRA_DIST): Remove it.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* locale.alias: Move to ../intl.
	* Makefile.am (EXTRA_DIST): Remove locale.alias.
	(localedir, locale_DATA): Remove variables.

2000-12-08  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Preserve RCS and CVS subdirs in intl/.
	Reported by Santiago Vila <sanvila@unex.es>.

	* gettextize.in: Test for ABOUT-NLS, not NLS.

2000-10-26  GOTO Masanori  <gotom@debian.or.jp>

	* locale.alias: Add ja_JP.ujis alias.

2000-08-31  Ulrich Drepper  <drepper@redhat.com>

	* locale.alias: Add aliases for bokmal and nynorsk.
