@@ -1,3 +1,8 @@
+2001-03-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettextize.in: Verbosity: describe each action being done. Make the
+	po/ChangeLog entry more intelligent.
+
 2001-03-10  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-font-lock-keywords): Respect entry types
